# dune-pdelab

./: .gitlab-ci.yml  CMakeLists.txt  config.h.cmake
dune/pdelab/backend/: CMakeLists.txt  interface.hh  petsc.hh
dune/pdelab/backend/eigen/: descriptors.hh  matrix.hh  solvers.hh  vector.hh
dune/pdelab/backend/istl/: bcrsmatrix.hh  bcrsmatrixbackend.hh  bcrspattern.hh  blockmatrixdiagonal.hh  cg_to_dg_prolongation.hh  descriptors.hh  matrixhelpers.hh  novlpistlsolverbackend.hh  ovlp_amg_dg_backend.hh  ovlpistlsolverbackend.hh  parallelhelper.hh  seqistlsolverbackend.hh  vector.hh  vectorhelpers.hh
dune/pdelab/backend/istl/geneo/: CMakeLists.txt  arpack_geneo_wrapper.hh  geneo.hh  (+5 more)
dune/pdelab/backend/petsc/: CMakeLists.txt  descriptors.hh  matrix.hh  vector.hh
dune/pdelab/backend/simple/: descriptors.hh  poisson_periodic_3d_q1_dg0.vtu  vector.hh
dune/pdelab/basis/: CMakeLists.txt  basis.hh  factory.hh  lagrange.hh  localbasis.hh  locallock.hh  localview.hh  merging_strategy.hh  mergingstrategy.hh  nodes.hh  prebasis.hh  protobasis.hh  topologicalinterleaving.hh  topologicassociativityforest.hh  utility.hh
dune/pdelab/basis/backend/: index_tree.hh  istl.hh  std.hh
dune/pdelab/basis/constraints/: container.hh  container_affine.hh
dune/pdelab/basis/ordering/: entity_base.hh  entityset.hh  lexicographic.hh
dune/pdelab/basis/protobasis/: CMakeLists.txt  composite.hh  concept.hh  leaf.hh  node.hh
dune/pdelab/basis/topologicassociativityforest/: CMakeLists.txt  composite.hh  leaf.hh  node.hh
dune/pdelab/basis/wrapper/: functions.hh  gridfunctionspace.hh
(+274 files in other folders)
