install(FILES lagrange.hh
              localview.hh
              locallock.hh
              mergingstrategy.hh
              prebasis.hh
              protobasis.hh
              factory.hh
              topologicalinterleaving.hh
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/pdelab/basis)
